@@ -1,5 +1,6 @@
 package com.example.demo;
 import com.example.demo.domain.ListEntry.ListEntry;
+import com.example.demo.domain.ListEntry.ListEntryRepository;
 import com.example.demo.domain.appUser.User;
 import com.example.demo.domain.appUser.UserService;
 import com.example.demo.domain.authority.Authority;
@@ -15,10 +16,7 @@ import org.springframework.boot.ApplicationRunner;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Set;
+import java.util.*;
 
 
 @Component
@@ -31,6 +29,8 @@ class AppStartupRunner implements ApplicationRunner {
     private final RoleRepository roleRepository;
     @Autowired
     private final AuthorityRepository authorityRepository;
+    @Autowired
+    private final ListEntryRepository listEntryRepository;
 
     @Override
     public void run(ApplicationArguments args) throws Exception {
@@ -38,16 +38,31 @@ class AppStartupRunner implements ApplicationRunner {
 //        e.g. to add a user or role to the DB (only for testing)
 
 //        Authorities
-        Authority read_auth=new Authority(null,"READ");
-        authorityRepository.save(read_auth);
-        ListEntry myEntry = new ListEntry();
+        List<Authority> allAuthorities = new ArrayList<>();
+        Authority readListEntryAuth = new Authority(null,"READ_LIST_ENTRY");
+        Authority createListEntryAuth = new Authority(null, "CREATE_LIST_ENTRY");
+        Authority updateListEntryAuth = new Authority(null, "UPDATE_LIST_ENTRY");
+        Authority deleteListEntryAuth = new Authority(null, "DELETE_LIST_ENTRY");
+        allAuthorities.add(readListEntryAuth);
+        allAuthorities.add(createListEntryAuth);
+        allAuthorities.add(updateListEntryAuth);
+        allAuthorities.add(deleteListEntryAuth);
+        authorityRepository.saveAll(allAuthorities);
+
+//        List Entries
+        ListEntry jamesEntry = new ListEntry();
 
 //        Roles
-        Role default_role = new Role(null, "DEFAULT",Arrays.asList(read_auth));
-        roleRepository.save(default_role);
+        Role adminRole = new Role(null, "ADMIN", allAuthorities);
+        Role userRole = new Role(null, "USER", List.of(readListEntryAuth));
+        roleRepository.save(adminRole);
+        roleRepository.save(userRole);
 
-        userService.saveUser(new User(null, "james","james.bond@mi6.com","bond", Set.of(default_role), Arrays.asList(myEntry)));
-        userService.addRoleToUser("james", "DEFAULT");
+        userService.saveUser(new User(null, "james","james.bond@mi6.com","bond", Set.of(userRole), Arrays.asList(jamesEntry)));
+        userService.saveUser(new User(null, "admin", "admin@mail.ch", "adm1n!", Set.of(adminRole), List.of()));
+        userService.addRoleToUser("james", "USER");
+        userService.addRoleToUser("admin", "ADMIN");
+
     }
 }
 
